Galeel | #1566 | Fixed - UI issue :  Section Alignment issue on visit page

--- a/ui/app/styles/clinical/_visit.scss
+++ b/ui/app/styles/clinical/_visit.scss
@@ -1,7 +1,7 @@
 .visit-summary-page {
     section.block {
         @extend .section-grid;
-        margin-bottom: 15px;
+        margin: 0 0 15px;
     }
 }
 
